Fix alignment on album title

--- a/app/assets/stylesheets/album_show.scss
+++ b/app/assets/stylesheets/album_show.scss
@@ -34,6 +34,7 @@
   font-size: 60px;
   color: white;
   font-weight: 300;
+  text-align: center;
 }
 
 .album-info > h2 {
